--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Amateurfeed</string>
+    <string name="ok_button">Ok</string>
+    <string name="sign_up_button">Sign up</string>
+    <string name="login">Login</string>
+    <string name="password">Password</string>
 </resources>
