--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,39 @@
     <string name="login">Login</string>
     <string name="password">Password</string>
 
+    <!--Setting Screen-->
+    <string name="label_activity_settings">Settings</string>
+
     <!--Dialog-->
     <string name="cancel">Cancel</string>
     <string name="ok" tools:ignore="Typos">OK</string>
-    <!--Profile-->
 
+    <!--Profile-->
     <string name="profile_toolbar_label">Profile</string>
+
+    <!--Feed-->
+    <string name="feed_toolbar_label">Feed</string>
+
+    <!--Search-->
+    <string name="search_toolbar_label">Search</string>
+
+    <!--Preference-->
+    <string name="preference_toolbar_label">Settings</string>
+    <string name="title_intent_edite_profile">Edit Profile</string>
+    <string name="title_intent_change_password">Change Password</string>
+
+    <!--Edite Profile Screen-->
+    <string name="edit_profile_toolbar_label">Edit Profile</string>
+
+
+
+    <!-- Strings related to Notification Enabled preference -->
+    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
+    <string name="pref_enable_notifications_label">Push Notifications</string>
+
+    <string name="pref_enable_notifications_true">Enabled</string>
+    <string name="pref_enable_notifications_false">Not Enabled</string>
+    <string name="pref_enable_notifications_default" translatable="false">true</string>
+    <string name="lable_activity_settings">Settings</string>
+
 </resources>
