--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,6 @@
     <string name="edit_profile_toolbar_label">Edit Profile</string>
 
 
-
     <!-- Strings related to Notification Enabled preference -->
     <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
     <string name="pref_enable_notifications_label">Push Notifications</string>
@@ -42,4 +41,7 @@
     <string name="pref_enable_notifications_default" translatable="false">true</string>
     <string name="lable_activity_settings">Settings</string>
 
+    <!--Button-->
+    <string name="cancel_button">Cancel</string>
+    <string name="save_button">Save</string>
 </resources>
