--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="app_name">Fashular</string>
     <string name="ok_button">Ввход</string>
-    <string name="sign_up_button">Зарегистрироваться</string>
-    <string name="login">Логин</string>
+    <string name="link_sign_up_screen"><u>Зарегистрироваться</u></string>
+    <string name="login">Эмейл</string>
     <string name="password">Пароль</string>
     <string name="ok">ОК</string>
     <string name="cancel">Завершить</string>
@@ -27,6 +27,22 @@
     <string name="incorrectPassword">Не корректный пароль</string>
     <string name="lengthPasswordError">Пароль длжен быть не меньше 6 символов</string>
     <string name="characterPasswordError">Пароль должен содержать миниму один символ в малом регистре (\'а\'-\'я\')</string>
-    <string name="incorrectLoginDialog">Праверьте  e-mail и пароль! \\n Попробуйте еще раз!</string>
+    <string name="incorrectLoginDialog">Проверьте  e-mail и пароль! \\n Попробуйте еще раз!</string>
     <string name="no_internet_connection">Нет связи с интернетом</string>
+    <string name="lable_sign_up">Если вы не зарегистрированы</string>
+    <string name="lable_already_sign_up">Если уже зарегистрированы</string>
+    <string name="link_login_screen"><u>Авторизация</u></string>
+    <string name="reset_button">Отправить</string>
+    <string name="server_error">Ошибка сервера</string>
+    <string name="lable_toolbar_sign_up">Регистрация</string>
+    <string name="lable_toolbar_forgot_password">Обновить Пароль</string>
+    <string name="lable_toolbar_login_in">Авторизация</string>
+    <string name="info_dialog_reset_password">Старый пароль сброшен \\n На E-mail  будет выслан новы пароль</string>
+    <string name="error_dialog_reset_password">Пароль не был выслан на e-mail. \\n Проверьте e-mail!</string>
+    <string name="lable_reset_password">Если Вы забыли пароль</string>
+    <string name="link_reset_password_screen"><u>Сбросить</u></string>
+    <string name="sign_up_button">Зарегистрироваться</string>
+    <string name="fullname">Имя</string>
+    <string name="phone">Телефон</string>
+    <string name="address">Адрес</string>
 </resources>
