--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!--Content Provider-->
     <string name="content_authority" translatable="false">com.dbbest.amateurfeed.app</string>
     <string name="app_name">Amateurfeed</string>
+
+    <!-- SyncAdapter related -->
+    <string name="sync_account_type" translatable="false">amateurfeed.dbbest.com</string>
 
     <!--Login Screen-->
     <string name="ok_button">Ok</string>
@@ -46,7 +49,7 @@
     <string name="profile_toolbar_label">Profile</string>
 
     <!--Feed-->
-    <string name="feed_toolbar_label">Feed</string>
+    <string name="feed_toolbar_label">News</string>
 
     <!--Search-->
     <string name="search_toolbar_label">Search</string>
@@ -91,6 +94,28 @@
     <string name="error_registartion">Registration fail!</string>
     <string name="success_registartion">Registration Success!</string>
 
+    <!--Dialog check button-->
+    <string name="like" translatable="false">Like</string>
+    <string name="comment" translatable="false">Comment</string>
+    <string name="edit" translatable="false">Edit</string>
+    <string name="remove" translatable="false">Delete</string>
+    <string name="item" translatable="false">Selected Item</string>
+
+    <!-- Empty News Database -->
+    <string name="empty_feed_list">No News Information Available.</string>
+
+    <!--News Feed-->
+<string name="get_news_succes">I get it! :)</string>
+    <string name="get_news_error">I can get it! :(</string>
+
+    <!-- Date format [CHAR LIMIT=NONE] -->
+    <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
+
+    <!-- Language-specific constants -->
+    <string name="today">Today</string>
+
+    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
+    <string name="yesterday">Yesterday</string>
 
 
 </resources>
