Implement NewsFeed architecture

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -121,4 +121,8 @@
     <string name="yesterday" translatable="false">Yesterday</string>
 
 
+    <!-- Tag format [CHAR LIMIT=NONE] -->
+    <string name="format_tag" translatable="false"><xliff:g id="name"><u>#%1$s</u></xliff:g></string>
+
+
 </resources>
