--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,12 @@
     <!--Edite Profile Screen-->
     <string name="edit_profile_toolbar_label">Edit Profile</string>
 
+    <!--Item Details Screen-->
+    <string name="detail_toolbar_label">Detail News</string>
+    <string name="item_comment_label">comments</string>
+    <string name="item_image_change_link"><u>Change image</u></string>
+    <string name="comment_hint">Write You comment</string>
+    <string name="description_hint">Write You Description</string>
 
     <!-- Strings related to Notification Enabled preference -->
     <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
