--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,7 @@
     <!--Item Detail Dialod-->
     <string name="change_image" translatable="false">You invoke change image option</string>
     <string name="set_edit_success" translatable="false">You Updated News :)</string>
+    <string name="set_edit_error" >Please logout and authenticate again</string>
 
     <!-- Date format [CHAR LIMIT=NONE] -->
     <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
@@ -153,11 +154,11 @@
 
 
     <!-- AZURE configuration direct -->
-    <string name="azure_direct_access_key">insert-access-key-here</string>
-    <string name="azure_container">pictures</string>
-    <string name="txt_acct_name">Account name</string>
-    <string name="txt_access_key">Access Key</string>
-    <string name="txt_container">Container</string>
+    <string name="azure_direct_access_key" translatable="false">insert-access-key-here</string>
+    <string name="azure_container" translatable="false">pictures</string>
+    <string name="txt_acct_name" translatable="false">Account name</string>
+    <string name="txt_access_key" translatable="false">Access Key</string>
+    <string name="txt_container" translatable="false">Container</string>
 
 
 </resources>
