--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -65,4 +65,6 @@
     <string name="tab_home">Дом</string>
     <string name="tab_search">Поиск</string>
     <string name="set_edit_error">Пожалуйста перелогинтесь!</string>
+    <string name="title_hint">Заголовок</string>
+    <string name="publish_button">Опубликовать</string>
 </resources>
