--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,8 @@
     <string name="item_image_change_link"><u>Change image</u></string>
     <string name="comment_hint">Write You comment</string>
     <string name="description_hint">Write You Description</string>
+    <string name="title_hint">Write You Title</string>
+    <string name="publish_button">Publish</string>
 
     <!-- Strings related to Notification Enabled preference -->
     <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
@@ -130,6 +132,7 @@
     <string name="change_image" translatable="false">You invoke change image option</string>
     <string name="set_edit_success" translatable="false">You Updated News :)</string>
     <string name="set_edit_error" >Please logout and authenticate again</string>
+    <string name="set_add_comment_success" translatable="false">You Added Comment :)</string>
 
     <!-- Date format [CHAR LIMIT=NONE] -->
     <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
