--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,7 @@
     <string name="set_edit_success" translatable="false">You Updated News :)</string>
     <string name="set_edit_error" >Please logout and authenticate again</string>
     <string name="set_add_comment_success" translatable="false">You Added Comment :)</string>
+    <string name="add_news_success" translatable="false">You Add News :)</string>
 
     <!-- Date format [CHAR LIMIT=NONE] -->
     <string name="format_full_friendly_date" translatable="false"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
