--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -68,4 +68,5 @@
     <string name="title_hint">Заголовок</string>
     <string name="publish_button">Опубликовать</string>
     <string name="search_hint">параметр поиска</string>
+    <string name="search_error">Новости не найдены.</string>
 </resources>
