--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -69,4 +69,5 @@
     <string name="publish_button">Опубликовать</string>
     <string name="search_hint">параметр поиска</string>
     <string name="search_error">Новости не найдены.</string>
+  <string name="add_news_image">Выберите фото</string>
 </resources>
