--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -35,11 +35,11 @@
     <string name="reset_button">Отправить</string>
     <string name="server_error">Ошибка сервера</string>
     <string name="lable_toolbar_sign_up">Регистрация</string>
-    <string name="lable_toolbar_forgot_password">Обновить Пароль</string>
+    <string name="label_toolbar_forgot_password">Обновить Пароль</string>
     <string name="lable_toolbar_login_in">Авторизация</string>
     <string name="info_dialog_reset_password">Старый пароль сброшен \\n На E-mail  будет выслан новы пароль</string>
     <string name="error_dialog_reset_password">Пароль не был выслан на e-mail. \\n Проверьте e-mail!</string>
-    <string name="lable_reset_password">Если Вы забыли пароль</string>
+    <string name="label_reset_password">Если Вы забыли пароль</string>
     <string name="link_reset_password_screen"><u>Сбросить</u></string>
     <string name="sign_up_button">Зарегистрироваться</string>
     <string name="fullname">Имя</string>
@@ -73,4 +73,7 @@
   <string name="my_item_amount_likes">Количесво Лайков:</string>
     <string name="my_item_status_label">Статус:</string>
     <string name="my_news_toolbar_label">Мои Новости</string>
+  <string name="phone_number">Номер телефона</string>
+    <string name="user_email">Email</string>
+    <string name="user_name">имя пользователя</string>
 </resources>
