--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -54,7 +54,7 @@
     <string name="incorrectPhone">Неверно введен номер телефона</string>
     <string name="empty_feed_list">Нет доступных  новостей</string>
     <string name="get_news_error">Новости не доступны :(</string>
-    <string name="get_news_succes">Новости получены :)</string>
+    <string name="get_news_success">Новости получены :)</string>
     <string name="abuse_dialog">\" <h><b>Напишите  запрос</b></h>  Для удаления этой новости,  отправьте запрос администратору!\"</string>
     <string name="item_image_change_link"><u>Изменить фото</u></string>
     <string name="item_comment_label">Комментарии</string>
@@ -76,4 +76,6 @@
   <string name="phone_number">Номер телефона</string>
     <string name="user_email">Email</string>
     <string name="user_name">имя пользователя</string>
+    <string name="update_profile_error">Профайл не обновлен</string>
+    <string name="update_profile_success">Профайл обновлен</string>
 </resources>
