added preference screen  implementation(not FCM)

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -10,14 +10,13 @@
     <string name="profile_toolbar_label">Личные данные</string>
     <string name="feed_toolbar_label">Лента</string>
     <string name="search_toolbar_label">Поиск</string>
-    <string name="lable_activity_settings">Настройки</string>
+    <string name="label_activity_settings">Настройки</string>
     <string name="pref_enable_notifications_false">Не доступно</string>
     <string name="pref_enable_notifications_true">Доступно</string>
     <string name="pref_enable_notifications_label">Включить Уведомления</string>
-    <string name="label_activity_settings">Настройки</string>
     <string name="preference_toolbar_label">Настройки</string>
     <string name="title_intent_change_password">Сменить пароль</string>
-    <string name="title_intent_edite_profile">Редактировать профайл</string>
+    <string name="title_intent_edit_profile">Редактировать профайл</string>
     <string name="edit_profile_toolbar_label">Редактировать Профиль</string>
     <string name="cancel_button">Отклонить</string>
     <string name="save_button">Сохранить</string>
@@ -78,4 +77,8 @@
     <string name="user_name">имя пользователя</string>
     <string name="update_profile_error">Профайл не обновлен</string>
     <string name="update_profile_success">Профайл обновлен</string>
+    <string name="change_toolbar_label">Изменить пароль</string>
+    <string name="hint_current_password">Текущий пароль</string>
+    <string name="hint_new_password">Новый пароль</string>
+    <string name="hint_new_password_again">Новый пароль снова</string>
 </resources>
