--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,8 +67,12 @@
 
   <!--Preference-->
   <string name="preference_toolbar_label">Settings</string>
-  <string name="title_intent_edite_profile">Edit Profile</string>
+  <string name="title_intent_edit_profile">Edit Profile</string>
   <string name="title_intent_change_password">Change Password</string>
+  <string name="title_intent_logout">Logout</string>
+  <string name="startEditProfile" translatable="false">startEditProfile</string>
+  <string name="startChangePassword" translatable="false">startChangePassword</string>
+  <string name="startLogout" translatable="false">logout</string>
 
   <!--Edit Profile Screen-->
   <string name="edit_profile_toolbar_label">Edit Profile</string>
@@ -82,6 +86,12 @@
   <string name="title_hint">Write You Title</string>
   <string name="publish_button">Publish</string>
 
+  <!--Change Password Screen-->
+  <string name="change_toolbar_label">Change Password</string>
+  <string name="hint_current_password">Current password</string>
+  <string name="hint_new_password">New password</string>
+  <string name="hint_new_password_again">New password again</string>
+
   <!-- Strings related to Notification Enabled preference -->
   <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
   <string name="pref_enable_notifications_label">Push Notifications</string>
@@ -89,7 +99,7 @@
   <string name="pref_enable_notifications_true">Enabled</string>
   <string name="pref_enable_notifications_false">Not Enabled</string>
   <string name="pref_enable_notifications_default" translatable="false">true</string>
-  <string name="lable_activity_settings">Settings</string>
+
 
   <!--Button-->
   <string name="cancel_button">Cancel</string>
