--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,13 @@
   <string name="hint_current_password">Current password</string>
   <string name="hint_new_password">New password</string>
   <string name="hint_new_password_again">New password again</string>
+  <string name="change_password_error">Password has not updated</string>
+  <string name="change_password_success">Password has  updated</string>
+  <string name="input_curr_password_error">Wrong input current password</string>
+  <string name="input_password_error">Wrong input new password</string>
+  <string name="input_confirm_password_error">Wrong input confirm password</string>
+  <string name="pass_confirm_password_error">New password and confirm password do not match</string>
+  <string name="input_password_length_error">Length of password would be over 6 symbols </string>
 
   <!-- Strings related to Notification Enabled preference -->
   <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
