--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -28,14 +28,14 @@
     <string name="characterPasswordError">Пароль должен содержать миниму один символ в малом регистре (\'а\'-\'я\')</string>
     <string name="incorrectLoginDialog">Проверьте  e-mail и пароль! \\n Попробуйте еще раз!</string>
     <string name="no_internet_connection">Нет связи с интернетом</string>
-    <string name="lable_sign_up">Если вы не зарегистрированы</string>
-    <string name="lable_already_sign_up">Если уже зарегистрированы</string>
+    <string name="label_sign_up">Если вы не зарегистрированы</string>
+    <string name="label_already_sign_up">Если уже зарегистрированы</string>
     <string name="link_login_screen"><u>Авторизация</u></string>
     <string name="reset_button">Отправить</string>
     <string name="server_error">Ошибка сервера</string>
-    <string name="lable_toolbar_sign_up">Регистрация</string>
+    <string name="label_toolbar_sign_up">Регистрация</string>
     <string name="label_toolbar_forgot_password">Обновить Пароль</string>
-    <string name="lable_toolbar_login_in">Авторизация</string>
+    <string name="label_toolbar_login_in">Авторизация</string>
     <string name="info_dialog_reset_password">Старый пароль сброшен \\n На E-mail  будет выслан новы пароль</string>
     <string name="error_dialog_reset_password">Пароль не был выслан на e-mail. \\n Проверьте e-mail!</string>
     <string name="label_reset_password">Если Вы забыли пароль</string>
