--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+
+  <!--OS-->
+  <string name="os_device" translatable="false">Android</string>
   <!--Content Provider-->
   <string name="content_authority" translatable="false">com.dbbest.amateurfeed.app</string>
   <string name="app_name">Amateurfeed</string>
@@ -8,7 +11,7 @@
   <string name="file_provider_authority" translatable="false">com.dbbest.amateurfeed.provider</string>
 
   <!-- SyncAdapter related -->
-  <string name="sync_account_type" translatable="false">amateurfeed.dbbest.com</string>
+  <string name="sync_account_type" translatable="false">com.dbbest.amateurfeed</string>
 
   <!--Google Map-->
   <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBo08owLuBT5YewWZlocnZzIRgelXQIWbw</string>
@@ -198,7 +201,7 @@
   <string name="txt_access_key" translatable="false">Access Key</string>
   <string name="txt_container" translatable="false">Container</string>
 
-  <!--Search Scree-->
+  <!--Search Screen-->
   <string name="search_hint">search parameter</string>
   <string name="phone_number">Phone number</string>
   <string name="user_email">User email</string>
